--- a/package.json
+++ b/package.json
@@ -17,20 +17,25 @@
   },
   "homepage": "https://github.com/fluxusfrequency/angularUnitTesting",
   "devDependencies": {
+    "browserify-shim": "^3.5.0",
+    "browserify": "^4.1.10",
     "karma-chrome-launcher": "^0.1.4",
     "karma-firefox-launcher": "^0.1.3",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma": "^0.12.16",
+    "mocha": "^1.20.1",
     "karma-mocha": "^0.1.3",
     "sinon-chai": "^2.5.0",
     "chai-as-promised": "^4.1.1",
     "karma-cli": "0.0.4",
     "chai": "^1.9.1",
-    "mocha": "^1.20.1",
-    "karma-phantomjs-launcher": "^0.1.4",
     "sinon": "^1.10.2",
-    "bower": "^1.3.5",
-    "browserify-shim": "^3.5.0",
-    "browserify": "^4.1.10",
-    "karma": "^0.12.16"
+    "bower": "^1.3.5"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
   },
   "browserify-shim": {
     "angular": "angular"
@@ -38,5 +43,8 @@
   "browser": {
     "angular": "./bower_components/angular/angular.js",
     "angular-mocks": "./bower_components/angular-mocks/angular-mocks.js"
+  },
+  "dependencies": {
+    "function-bind": "^0.1.0"
   }
 }
