--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "karma-cli": "0.0.4",
     "chai": "^1.9.1",
     "sinon": "^1.10.2",
-    "bower": "^1.3.5"
+    "bower": "^1.3.5",
+    "partialify": "^3.1.1",
+    "protractor": "^0.24.1"
   },
   "browserify": {
     "transform": [
+      "partialify",
       "browserify-shim"
     ]
   },
